--- a/GameEngineCompare/cocos2d/project.json
+++ b/GameEngineCompare/cocos2d/project.json
@@ -9,6 +9,7 @@
     "modules" : ["core", "actions", "text-input"],
 
     "jsList" : [
+        "src/animations.js",
         "src/sprites.js"
     ]
 }
