--- a/facebook/project.json
+++ b/facebook/project.json
@@ -25,8 +25,8 @@
         }
     },
     "jsList" : [
-        "plugin/Plugin.js",
-        "plugin/platform/facebook.js",
-        "plugin/platform/facebook_sdk.js"
+        "pluginx/Plugin.js",
+        "pluginx/platform/facebook_sdk.js",
+        "pluginx/platform/facebook.js"
     ]
 }
