--- a/compare/cocos3.0/project.json
+++ b/compare/cocos3.0/project.json
@@ -10,6 +10,7 @@
 
     "jsList" : [
         "src/resource.js",
-        "src/myApp.js"
+        "src/myApp.js",
+        "src/myApp2.js"
     ]
 }
