增加mobile测试页面

--- a/compare/cocos3.0/project.json
+++ b/compare/cocos3.0/project.json
@@ -6,11 +6,13 @@
     "renderMode" : 1,
     "engineDir":"./cocos2d-html5",
 
-    "modules"       : ["cocos2d", "extensions", "external"],
+    "modules"       : ["cocos2d"],
 
     "jsList" : [
         "src/resource.js",
         "src/myApp.js",
-        "src/myApp2.js"
+        "src/myApp2.js",
+        "src/index-phone.js",
+        "src/update-phone.js"
     ]
 }
