--- a/christmas/project.json
+++ b/christmas/project.json
@@ -1,30 +1,1 @@
-{
-    "debugMode" : 1,
-    "showFPS" : false,
-    "frameRate" : 60,
-    "id" : "gameCanvas",
-    "renderMode" : 1,
-    "engineDir":"../cocos2d-html5",
-
-    "modules" : ["cocos2d"],
-
-    "jsList" : [
-        "src/resource.js",
-        "src/dispatch.js",
-
-        "src/initial/layer.js",
-        "src/initial/info.js",
-
-        "src/game/GameLoop.js",
-        "src/game/layer.js",
-        "src/game/ScoreLayer.js",
-        "src/background/layer.js",
-
-        "src/game/data.js",
-        "src/game/Enemies.js",
-        "src/game/Buddy.js",
-
-        "src/game/House.js"
-
-    ]
-}
+{"showFPS": false, "frameRate": 60, "debugMode": 1, "renderMode": 1, "id": "gameCanvas"}
